--- a/assets/po/gl_ES.po
+++ b/assets/po/gl_ES.po
@@ -17,128 +17,79 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: menu/mainpage.py:119
-msgid "Server problem"
-msgstr ""
-
-#: menu/mainpage.py:121
-msgid "Not up-to-date"
-msgstr "Non Actualizado"
-
-#: menu/mainpage.py:123
-msgid "Log out"
-msgstr "Sair"
-
-#: menu/mainpage.py:126
-msgid "Log in"
-msgstr "Loguearse"
-
-#: menu/mainpage.py:126
-#, fuzzy
-msgid "multiplayer"
-msgstr "Multixogador"
-
-#. i18n: This is a caption of a button.
-#: menu/mainpage.py:128
-#, fuzzy
-msgid "Connecting"
-msgstr "Conectar"
-
-#: menu/mainpage.py:136
-msgid "Single Player"
-msgstr "Un Xogador"
-
-#: menu/mainpage.py:137
-msgid "Options"
-msgstr "Opcións"
-
-#: menu/mainpage.py:138
-msgid "Support us"
-msgstr "Axúdanos"
-
-#: menu/mainpage.py:139
-msgid "Credits"
-msgstr "Créditos"
-
-#: menu/mainpage.py:141 yyagl/engine/gui/page.py:179
-msgid "Quit"
-msgstr "Sair"
-
-#: menu/mainpage.py:158
-msgid "Note: the game is work-in-progress"
-msgstr "Nota: este xogo está en desenvolvimento"
-
-#: menu/mainpage.py:195 menu/mainpage.py:198
-msgid "Last news:"
-msgstr "Últimas Noticias"
-
-#: menu/mainpage.py:208 menu/mainpage.py:210
-msgid "show"
-msgstr "Amosar"
-
-#: menu/registerpage.py:21 menu/resetpage.py:21
+#: menu/resetpage.py:21 menu/registerpage.py:21
 #, fuzzy
 msgid "Your email:"
 msgstr "Teu ID de Jabber:"
 
-#: menu/registerpage.py:23 menu/resetpage.py:23 menu/loginpage.py:21
+#: menu/resetpage.py:23 menu/loginpage.py:21 menu/registerpage.py:23
 #, fuzzy
 msgid "Your user id:"
 msgstr "Teu ID de Jabber:"
 
-#: menu/registerpage.py:25 menu/loginpage.py:23
-#, fuzzy
-msgid "Your password:"
-msgstr "O teu contrasinal de Jabber"
-
-#: menu/registerpage.py:29 menu/registerpage.py:93 menu/registerpage.py:112
 #: menu/resetpage.py:27 menu/resetpage.py:74 menu/resetpage.py:93
 #: menu/loginpage.py:27 menu/loginpage.py:93 menu/loginpage.py:101
+#: menu/registerpage.py:29 menu/registerpage.py:93 menu/registerpage.py:112
 #, fuzzy
 msgid "your user id"
 msgstr "O teu ID de Jabber"
 
-#: menu/registerpage.py:32 menu/registerpage.py:99 menu/registerpage.py:107
 #: menu/resetpage.py:30 menu/resetpage.py:80 menu/resetpage.py:88
+#: menu/registerpage.py:32 menu/registerpage.py:99 menu/registerpage.py:107
 #, fuzzy
 msgid "your email"
 msgstr "Teu Nome"
 
-#: menu/registerpage.py:45 menu/loginpage.py:56
-msgid "Register"
+#: menu/resetpage.py:39 menu/loginpage.py:65
+msgid "Reset"
 msgstr ""
 
-#: menu/registerpage.py:67
+#: menu/resetpage.py:54
 msgid ""
-"Your account has been registered. Now, in order to activate it, you should "
-"click the link that we've sent to your email (please check your spam folder "
-"if you can't find it). After that, you can log in."
+"We've sent an email to you (please check your spam folder if you can't find "
+"it) with the instructions for completing the reset."
 msgstr ""
 
-#: menu/registerpage.py:72
-msgid "Your nickname's format is invalid: please use only letters and numbers."
+#: menu/resetpage.py:56
+msgid "This email isn't in our archive."
 msgstr ""
 
-#: menu/registerpage.py:74
-msgid "Your email's format is invalid."
+#: menu/resetpage.py:57
+msgid "This nickname isn't in our archive."
 msgstr ""
 
-#: menu/registerpage.py:75
-msgid "Your nickname already exists."
+#: menu/resetpage.py:58
+msgid "This nickname-email pair isn't in our archive."
 msgstr ""
 
-#: menu/registerpage.py:76
-msgid "Your email has already been used."
-msgstr ""
-
-#: menu/registerpage.py:77 menu/resetpage.py:59
+#: menu/resetpage.py:59 menu/registerpage.py:77
 #, fuzzy
 msgid "Connection error."
 msgstr "Conexión dende"
 
-#: menu/registerpage.py:135 menu/resetpage.py:114 menu/loginpage.py:118
+#: menu/resetpage.py:114 menu/loginpage.py:119 menu/registerpage.py:135
 msgid "Error"
 msgstr "Erro"
+
+#: menu/creditpage.py:10
+msgid "Code"
+msgstr "Código"
+
+#: menu/creditpage.py:11
+msgid "Art"
+msgstr "Arte"
+
+#: menu/creditpage.py:12
+msgid "Audio"
+msgstr "Audio"
+
+#: menu/creditpage.py:13
+msgid "Translations"
+msgstr "Traduccións"
+
+#: menu/creditpage.py:18
+msgid "Supporters"
+msgstr "Contribuintes"
 
 #: menu/inputpage.py:26 menu/inputpage.py:29
 msgid "Use the joypad when present"
@@ -224,92 +175,26 @@ msgstr ""
 msgid "Configure input"
 msgstr "Configurar as teclas"
 
-#: menu/singleplayerpage.py:15
-msgid "Single race"
-msgstr "Carreira Única"
+#: menu/carpage.py:27
+msgid "Select the car"
+msgstr "Seleciona o coche"
 
-#: menu/singleplayerpage.py:16
-msgid "New season"
-msgstr "Nova Sesión"
-
-#: menu/singleplayerpage.py:17
-msgid "Continue season"
-msgstr "Continuar Sesión"
-
-#: menu/creditpage.py:10
-msgid "Code"
-msgstr "Código"
-
-#: menu/creditpage.py:11
-msgid "Art"
-msgstr "Arte"
-
-#: menu/creditpage.py:12
-msgid "Audio"
-msgstr "Audio"
-
-#: menu/creditpage.py:13
-msgid "Translations"
-msgstr "Traduccións"
-
-#: menu/creditpage.py:18
-msgid "Supporters"
-msgstr "Contribuintes"
-
-#: menu/trackpage.py:18
-msgid "Select the track"
-msgstr "Selecciona o Circuito"
-
-#: menu/resetpage.py:39 menu/loginpage.py:65
-msgid "Reset"
-msgstr ""
-
-#: menu/resetpage.py:54
-msgid ""
-"We've sent an email to you (please check your spam folder if you can't find "
-"it) with the instructions for completing the reset."
-msgstr ""
-
-#: menu/resetpage.py:56
-msgid "This email isn't in our archive."
-msgstr ""
-
-#: menu/resetpage.py:57
-msgid "This nickname isn't in our archive."
-msgstr ""
-
-#: menu/resetpage.py:58
-msgid "This nickname-email pair isn't in our archive."
-msgstr ""
-
-#: menu/thankspage.py:15
-msgid "Thanks to: "
-msgstr "Grazas a:"
-
-#: menu/driverpage.py:46
-msgid "Select the driver"
-msgstr "Selecciona o Piloto"
-
-#: menu/driverpage.py:50
-msgid "Write your name:"
-msgstr "Escribe o teu Nome:"
-
-#: menu/driverpage.py:74 menu/carpage.py:78
+#: menu/carpage.py:78 menu/driverpage.py:74
 msgid "adherence"
 msgstr "Aderencia"
 
-#: menu/driverpage.py:74 menu/carpage.py:78
+#: menu/carpage.py:78 menu/driverpage.py:74
 msgid "speed"
 msgstr "Velocidade"
 
-#: menu/driverpage.py:75 menu/carpage.py:79
+#: menu/carpage.py:79 menu/driverpage.py:75
 msgid "stability"
 msgstr "Estabilidade"
 
-#: menu/driverpage.py:167 menu/driverpage.py:174 menu/driverpage.py:175
-#: menu/driverpage.py:176 menu/driverpage.py:178 menu/driverpage.py:181
-msgid "your name"
-msgstr "Teu Nome"
+#: menu/loginpage.py:23 menu/registerpage.py:25
+#, fuzzy
+msgid "Your password:"
+msgstr "O teu contrasinal de Jabber"
 
 #: menu/loginpage.py:38
 msgid "Log-in"
@@ -326,13 +211,128 @@ msgstr ""
 msgid "If you don't have an account, then you can register:"
 msgstr ""
 
+#: menu/loginpage.py:56 menu/registerpage.py:45
+msgid "Register"
+msgstr ""
+
 #: menu/loginpage.py:59
 msgid "If you want to reset your password:"
 msgstr ""
 
-#: menu/carpage.py:27
-msgid "Select the car"
-msgstr "Seleciona o coche"
+#: menu/thankspage.py:15
+msgid "Thanks to: "
+msgstr "Grazas a:"
+
+#: menu/trackpage.py:18
+msgid "Select the track"
+msgstr "Selecciona o Circuito"
+
+#: menu/driverpage.py:46
+msgid "Select the driver"
+msgstr "Selecciona o Piloto"
+
+#: menu/driverpage.py:50
+msgid "Write your name:"
+msgstr "Escribe o teu Nome:"
+
+#: menu/driverpage.py:167 menu/driverpage.py:174 menu/driverpage.py:175
+#: menu/driverpage.py:176 menu/driverpage.py:178 menu/driverpage.py:181
+msgid "your name"
+msgstr "Teu Nome"
+
+#: menu/mainpage.py:119
+msgid "Server problem"
+msgstr ""
+
+#: menu/mainpage.py:121
+msgid "Not up-to-date"
+msgstr "Non Actualizado"
+
+#: menu/mainpage.py:123
+msgid "Log out"
+msgstr "Sair"
+
+#: menu/mainpage.py:126
+msgid "Log in"
+msgstr "Loguearse"
+
+#: menu/mainpage.py:126
+#, fuzzy
+msgid "multiplayer"
+msgstr "Multixogador"
+
+#. i18n: This is a caption of a button.
+#: menu/mainpage.py:128
+#, fuzzy
+msgid "Connecting"
+msgstr "Conectar"
+
+#: menu/mainpage.py:136
+msgid "Single Player"
+msgstr "Un Xogador"
+
+#: menu/mainpage.py:137
+msgid "Options"
+msgstr "Opcións"
+
+#: menu/mainpage.py:138
+msgid "Support us"
+msgstr "Axúdanos"
+
+#: menu/mainpage.py:139
+msgid "Credits"
+msgstr "Créditos"
+
+#: menu/mainpage.py:141 yyagl/engine/gui/page.py:179
+msgid "Quit"
+msgstr "Sair"
+
+#: menu/mainpage.py:158
+msgid "Note: the game is work-in-progress"
+msgstr "Nota: este xogo está en desenvolvimento"
+
+#: menu/mainpage.py:195 menu/mainpage.py:198
+msgid "Last news:"
+msgstr "Últimas Noticias"
+
+#: menu/mainpage.py:208 menu/mainpage.py:210
+msgid "show"
+msgstr "Amosar"
+
+#: menu/registerpage.py:67
+msgid ""
+"Your account has been registered. Now, in order to activate it, you should "
+"click the link that we've sent to your email (please check your spam folder "
+"if you can't find it). After that, you can log in."
+msgstr ""
+
+#: menu/registerpage.py:72
+msgid "Your nickname's format is invalid: please use only letters and numbers."
+msgstr ""
+
+#: menu/registerpage.py:74
+msgid "Your email's format is invalid."
+msgstr ""
+
+#: menu/registerpage.py:75
+msgid "Your nickname already exists."
+msgstr ""
+
+#: menu/registerpage.py:76
+msgid "Your email has already been used."
+msgstr ""
+
+#: menu/singleplayerpage.py:15
+msgid "Single race"
+msgstr "Carreira Única"
+
+#: menu/singleplayerpage.py:16
+msgid "New season"
+msgstr "Nova Sesión"
+
+#: menu/singleplayerpage.py:17
+msgid "Continue season"
+msgstr "Continuar Sesión"
 
 #: menu/exitmenu/exitpage.py:14
 msgid ""
@@ -370,65 +370,6 @@ msgstr "Voltar ó Xogo"
 msgid "back to the main menu"
 msgstr "Voltar ó Menú Principal"
 
-#: menu/multiplayer/messagefrm.py:62 menu/multiplayer/messagefrm.py:205
-#: menu/multiplayer/messagefrm.py:253 menu/multiplayer/messagefrm.py:505
-#, fuzzy
-msgid "write here your message"
-msgstr "Escribe o teu Nome:"
-
-#: menu/multiplayer/messagefrm.py:379 menu/multiplayer/messagefrm.py:400
-msgid "you"
-msgstr "Ti"
-
-#: menu/multiplayer/invite_dlg.py:16
-#, python-format
-msgid "%s has invited you to a match, do you agree?"
-msgstr "%s invitoute a unha partida, ¿estás de acordo?"
-
-#: menu/multiplayer/friend_dlg.py:15
-#, python-format
-msgid "%s wants to be a (XMPP) friend of you, do you agree?"
-msgstr "%s quere ser amigo teu (XMPP), ¿estás de acordo?"
-
-#: menu/multiplayer/remove_dlg.py:13
-msgid "you have been removed from the match"
-msgstr "foches borrado da partida"
-
-#: menu/multiplayer/multiplayerfrm.py:115
-msgid ""
-"We've detected connection problems during server's creation. Please check "
-"your connection."
-msgstr ""
-"Detectamos problemas de conexión durante a creación do servidor. Por favor "
-"comprobaa tua conexión."
-
-#: menu/multiplayer/multiplayerfrm.py:118
-msgid "We can't connect to httpbin. Please retry later."
-msgstr "Non podemos conectar a httpbin. Por favor, tentao mais tarde."
-
-#: menu/multiplayer/exit_dlg.py:14
-#, fuzzy, python-format
-msgid "the server user %s has quit"
-msgstr "o usario do servidor %s saíu"
-
-#: menu/multiplayer/forms.py:34
-#, fuzzy
-msgid "Supporter!"
-msgstr "Contribuintes!"
-
-#: menu/multiplayer/forms.py:87
-msgid "send a message to the user"
-msgstr "enviar unha mensaxe o usuario"
-
-#: menu/multiplayer/forms.py:123
-#, fuzzy, python-format
-msgid "%s isn't playing yorg"
-msgstr "non está a xogar a Yorg"
-
-#: menu/multiplayer/forms.py:180
-msgid "remove from the match"
-msgstr "borrar da partida"
-
 #: menu/multiplayer/matchfrm.py:160
 msgid "Start"
 msgstr "Comezar"
@@ -437,6 +378,16 @@ msgstr "Comezar"
 #, fuzzy
 msgid "please wait for the server"
 msgstr "Agardando polo servidor"
+
+#: menu/multiplayer/exit_dlg.py:14
+#, fuzzy, python-format
+msgid "the server user %s has quit"
+msgstr "o usario do servidor %s saíu"
+
+#: menu/multiplayer/friend_dlg.py:15
+#, python-format
+msgid "%s wants to be a (XMPP) friend of you, do you agree?"
+msgstr "%s quere ser amigo teu (XMPP), ¿estás de acordo?"
 
 #: menu/multiplayer/usersfrm.py:32
 msgid "Current online users"
@@ -474,6 +425,38 @@ msgstr "xa invitaches a este usuario"
 msgid "the user is already playing a match"
 msgstr "o usuario esta neste momento xogando unha partida"
 
+#: menu/multiplayer/messagefrm.py:62 menu/multiplayer/messagefrm.py:205
+#: menu/multiplayer/messagefrm.py:253 menu/multiplayer/messagefrm.py:509
+#, fuzzy
+msgid "write here your message"
+msgstr "Escribe o teu Nome:"
+
+#: menu/multiplayer/messagefrm.py:379 menu/multiplayer/messagefrm.py:404
+msgid "you"
+msgstr "Ti"
+
+#: menu/multiplayer/remove_dlg.py:13
+msgid "you have been removed from the match"
+msgstr "foches borrado da partida"
+
+#: menu/multiplayer/forms.py:34
+#, fuzzy
+msgid "Supporter!"
+msgstr "Contribuintes!"
+
+#: menu/multiplayer/forms.py:85
+msgid "send a message to the user"
+msgstr "enviar unha mensaxe o usuario"
+
+#: menu/multiplayer/forms.py:121
+#, fuzzy, python-format
+msgid "%s isn't playing yorg"
+msgstr "non está a xogar a Yorg"
+
+#: menu/multiplayer/forms.py:178
+msgid "remove from the match"
+msgstr "borrar da partida"
+
 #: menu/multiplayer/network_dlg.py:13
 msgid ""
 "Connection error. Please check that (i) your firewall allows traffic for "
@@ -485,33 +468,58 @@ msgstr ""
 "porto 9099 (aqui tes unha guía para comprobalo: http://www.ya2.it/pages/"
 "check-your-ports.html)."
 
-#: yorg/fsm.py:167 yorg/yorg.py:174
+#: menu/multiplayer/multiplayerfrm.py:115
+msgid ""
+"We've detected connection problems during server's creation. Please check "
+"your connection."
+msgstr ""
+"Detectamos problemas de conexión durante a creación do servidor. Por favor "
+"comprobaa tua conexión."
+
+#: menu/multiplayer/multiplayerfrm.py:118
+msgid "We can't connect to httpbin. Please retry later."
+msgstr "Non podemos conectar a httpbin. Por favor, tentao mais tarde."
+
+#: menu/multiplayer/invite_dlg.py:16
+#, python-format
+msgid "%s has invited you to a match, do you agree?"
+msgstr "%s invitoute a unha partida, ¿estás de acordo?"
+
+#: yorg/yorg.py:179 yorg/fsm.py:170
+msgid "Sinus Aestuum"
+msgstr ""
+
+#: yorg/yorg.py:179 yorg/fsm.py:167
 msgid "Toronto"
 msgstr "Toronto"
 
-#: yorg/fsm.py:167 yorg/yorg.py:174
+#: yorg/yorg.py:179 yorg/fsm.py:167
 msgid "Rome"
 msgstr "Roma"
 
-#: yorg/fsm.py:168 yorg/yorg.py:174
+#: yorg/yorg.py:179 yorg/fsm.py:168
 msgid "Sheffield"
 msgstr "Sheffield"
 
-#: yorg/fsm.py:168 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:168
 msgid "Orlando"
 msgstr "Orlando"
 
-#: yorg/fsm.py:169 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:169
 msgid "Nagano"
 msgstr "Nagano"
 
-#: yorg/fsm.py:169 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:169
 msgid "Dubai"
 msgstr "Dubai"
 
-#: yorg/yorg.py:174
-msgid "Moon"
-msgstr ""
+#: yyagl/engine/gui/page.py:179
+msgid "Back"
+msgstr "Voltar"
+
+#: yyagl/engine/gui/mainpage.py:33
+msgid "version: "
+msgstr "Versión: "
 
 #: yyagl/racing/tuning/gui.py:24
 msgid "What do you want to upgrade?"
@@ -567,6 +575,19 @@ msgstr "Danos:"
 msgid "weapon"
 msgstr "Arma:"
 
+#: yyagl/racing/ranking/gui.py:27
+#: yyagl/racing/race/gui/loading/loadingpage.py:63
+msgid "Ranking"
+msgstr "Posición"
+
+#: yyagl/racing/ranking/gui.py:44
+msgid "Congratulations!"
+msgstr "¡Parabéns!"
+
+#: yyagl/racing/ranking/gui.py:53 yyagl/racing/race/gui/results.py:81
+msgid "Continue"
+msgstr "Continuar"
+
 #: yyagl/racing/race/event.py:110
 #, python-format
 msgid "press %s to respawn"
@@ -592,10 +613,6 @@ msgstr "CLASIFICACIÓN"
 msgid "share:"
 msgstr "Compartir:"
 
-#: yyagl/racing/race/gui/results.py:81 yyagl/racing/ranking/gui.py:53
-msgid "Continue"
-msgstr "Continuar"
-
 #: yyagl/racing/race/gui/loading/loadingpage.py:25
 msgid "LOADING..."
 msgstr "CARGANDO..."
@@ -607,11 +624,6 @@ msgstr "Volta: "
 #: yyagl/racing/race/gui/loading/loadingpage.py:52
 msgid "Starting grid"
 msgstr "Posición de Saida"
-
-#: yyagl/racing/race/gui/loading/loadingpage.py:63
-#: yyagl/racing/ranking/gui.py:27
-msgid "Ranking"
-msgstr "Posición"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:72
 msgid "Controls"
@@ -660,18 +672,6 @@ msgstr "Rodas: +"
 #: yyagl/racing/race/gui/loading/loadingpage.py:104
 msgid "suspensions: +"
 msgstr "Suspensión: +"
-
-#: yyagl/racing/ranking/gui.py:44
-msgid "Congratulations!"
-msgstr "¡Parabéns!"
-
-#: yyagl/engine/gui/mainpage.py:33
-msgid "version: "
-msgstr "Versión: "
-
-#: yyagl/engine/gui/page.py:179
-msgid "Back"
-msgstr "Voltar"
 
 #~ msgid "store the password"
 #~ msgstr "gardar contrasinal"
