--- a/assets/po/gd.po
+++ b/assets/po/gd.po
@@ -18,126 +18,79 @@ msgstr ""
 "(n > 2 && n < 20) ? 2 : 3;\n"
 "X-Generator: Virtaal 0.7.1\n"
 
-#: menu/mainpage.py:119
-msgid "Server problem"
-msgstr ""
-
-#: menu/mainpage.py:121
-msgid "Not up-to-date"
-msgstr "Chan eil seo cho ùr ’sa ghabhas"
-
-#: menu/mainpage.py:123
-msgid "Log out"
-msgstr "Clàraich a-mach"
-
-#: menu/mainpage.py:126
-msgid "Log in"
-msgstr "Clàraich a-steach"
-
-#: menu/mainpage.py:126
-msgid "multiplayer"
-msgstr "ioma-chluicheadair"
-
-#. i18n: This is a caption of a button.
-#: menu/mainpage.py:128
-msgid "Connecting"
-msgstr "’Ga cheangail"
-
-#: menu/mainpage.py:136
-msgid "Single Player"
-msgstr "Aon chluicheadair"
-
-#: menu/mainpage.py:137
-msgid "Options"
-msgstr "Roghainnean"
-
-#: menu/mainpage.py:138
-msgid "Support us"
-msgstr "Thoir taic dhuinn"
-
-#: menu/mainpage.py:139
-msgid "Credits"
-msgstr "Urram"
-
-#: menu/mainpage.py:141 yyagl/engine/gui/page.py:179
-msgid "Quit"
-msgstr "Fàg an-seo"
-
-#: menu/mainpage.py:158
-msgid "Note: the game is work-in-progress"
-msgstr "An aire: tha sinn ag obair air a’ gheama seo fhathast"
-
-#: menu/mainpage.py:195 menu/mainpage.py:198
-msgid "Last news:"
-msgstr "Na naidheachdan as ùire:"
-
-#: menu/mainpage.py:208 menu/mainpage.py:210
-msgid "show"
-msgstr "seall"
-
-#: menu/registerpage.py:21 menu/resetpage.py:21
+#: menu/resetpage.py:21 menu/registerpage.py:21
 #, fuzzy
 msgid "Your email:"
 msgstr "An id jabber agad:"
 
-#: menu/registerpage.py:23 menu/resetpage.py:23 menu/loginpage.py:21
+#: menu/resetpage.py:23 menu/loginpage.py:21 menu/registerpage.py:23
 #, fuzzy
 msgid "Your user id:"
 msgstr "An id jabber agad:"
 
-#: menu/registerpage.py:25 menu/loginpage.py:23
-#, fuzzy
-msgid "Your password:"
-msgstr "Am facal-faire jabber agad:"
-
-#: menu/registerpage.py:29 menu/registerpage.py:93 menu/registerpage.py:112
 #: menu/resetpage.py:27 menu/resetpage.py:74 menu/resetpage.py:93
 #: menu/loginpage.py:27 menu/loginpage.py:93 menu/loginpage.py:101
+#: menu/registerpage.py:29 menu/registerpage.py:93 menu/registerpage.py:112
 #, fuzzy
 msgid "your user id"
 msgstr "an id jabber agad"
 
-#: menu/registerpage.py:32 menu/registerpage.py:99 menu/registerpage.py:107
 #: menu/resetpage.py:30 menu/resetpage.py:80 menu/resetpage.py:88
+#: menu/registerpage.py:32 menu/registerpage.py:99 menu/registerpage.py:107
 #, fuzzy
 msgid "your email"
 msgstr "d’ ainm"
 
-#: menu/registerpage.py:45 menu/loginpage.py:56
-msgid "Register"
+#: menu/resetpage.py:39 menu/loginpage.py:65
+msgid "Reset"
 msgstr ""
 
-#: menu/registerpage.py:67
+#: menu/resetpage.py:54
 msgid ""
-"Your account has been registered. Now, in order to activate it, you should "
-"click the link that we've sent to your email (please check your spam folder "
-"if you can't find it). After that, you can log in."
+"We've sent an email to you (please check your spam folder if you can't find "
+"it) with the instructions for completing the reset."
 msgstr ""
 
-#: menu/registerpage.py:72
-msgid "Your nickname's format is invalid: please use only letters and numbers."
+#: menu/resetpage.py:56
+msgid "This email isn't in our archive."
 msgstr ""
 
-#: menu/registerpage.py:74
-msgid "Your email's format is invalid."
+#: menu/resetpage.py:57
+msgid "This nickname isn't in our archive."
 msgstr ""
 
-#: menu/registerpage.py:75
-msgid "Your nickname already exists."
+#: menu/resetpage.py:58
+msgid "This nickname-email pair isn't in our archive."
 msgstr ""
 
-#: menu/registerpage.py:76
-msgid "Your email has already been used."
-msgstr ""
-
-#: menu/registerpage.py:77 menu/resetpage.py:59
+#: menu/resetpage.py:59 menu/registerpage.py:77
 #, fuzzy
 msgid "Connection error."
 msgstr "ceangal o "
 
-#: menu/registerpage.py:135 menu/resetpage.py:114 menu/loginpage.py:118
+#: menu/resetpage.py:114 menu/loginpage.py:119 menu/registerpage.py:135
 msgid "Error"
 msgstr "Mearachd"
+
+#: menu/creditpage.py:10
+msgid "Code"
+msgstr "Còd"
+
+#: menu/creditpage.py:11
+msgid "Art"
+msgstr "Obair-ealain"
+
+#: menu/creditpage.py:12
+msgid "Audio"
+msgstr "Fuaimean"
+
+#: menu/creditpage.py:13
+msgid "Translations"
+msgstr "Eadar-theangachadh"
+
+#: menu/creditpage.py:18
+msgid "Supporters"
+msgstr "Luchd-taic"
 
 #: menu/inputpage.py:26 menu/inputpage.py:29
 msgid "Use the joypad when present"
@@ -223,92 +176,26 @@ msgstr ""
 msgid "Configure input"
 msgstr "Rèitich an t-ion-chur"
 
-#: menu/singleplayerpage.py:15
-msgid "Single race"
-msgstr "Rèis a-mhàin"
+#: menu/carpage.py:27
+msgid "Select the car"
+msgstr "Tagh an càr"
 
-#: menu/singleplayerpage.py:16
-msgid "New season"
-msgstr "Seusan ùr"
-
-#: menu/singleplayerpage.py:17
-msgid "Continue season"
-msgstr "Lean air adhart air an t-seusan"
-
-#: menu/creditpage.py:10
-msgid "Code"
-msgstr "Còd"
-
-#: menu/creditpage.py:11
-msgid "Art"
-msgstr "Obair-ealain"
-
-#: menu/creditpage.py:12
-msgid "Audio"
-msgstr "Fuaimean"
-
-#: menu/creditpage.py:13
-msgid "Translations"
-msgstr "Eadar-theangachadh"
-
-#: menu/creditpage.py:18
-msgid "Supporters"
-msgstr "Luchd-taic"
-
-#: menu/trackpage.py:18
-msgid "Select the track"
-msgstr "Tagh an t-slighe"
-
-#: menu/resetpage.py:39 menu/loginpage.py:65
-msgid "Reset"
-msgstr ""
-
-#: menu/resetpage.py:54
-msgid ""
-"We've sent an email to you (please check your spam folder if you can't find "
-"it) with the instructions for completing the reset."
-msgstr ""
-
-#: menu/resetpage.py:56
-msgid "This email isn't in our archive."
-msgstr ""
-
-#: menu/resetpage.py:57
-msgid "This nickname isn't in our archive."
-msgstr ""
-
-#: menu/resetpage.py:58
-msgid "This nickname-email pair isn't in our archive."
-msgstr ""
-
-#: menu/thankspage.py:15
-msgid "Thanks to: "
-msgstr "Taing do: "
-
-#: menu/driverpage.py:46
-msgid "Select the driver"
-msgstr "Tagh an draibhear"
-
-#: menu/driverpage.py:50
-msgid "Write your name:"
-msgstr "Sgrìobh d’ ainm:"
-
-#: menu/driverpage.py:74 menu/carpage.py:78
+#: menu/carpage.py:78 menu/driverpage.py:74
 msgid "adherence"
 msgstr "sticeadh"
 
-#: menu/driverpage.py:74 menu/carpage.py:78
+#: menu/carpage.py:78 menu/driverpage.py:74
 msgid "speed"
 msgstr "luaths"
 
-#: menu/driverpage.py:75 menu/carpage.py:79
+#: menu/carpage.py:79 menu/driverpage.py:75
 msgid "stability"
 msgstr "seasmhachd"
 
-#: menu/driverpage.py:167 menu/driverpage.py:174 menu/driverpage.py:175
-#: menu/driverpage.py:176 menu/driverpage.py:178 menu/driverpage.py:181
-msgid "your name"
-msgstr "d’ ainm"
+#: menu/loginpage.py:23 menu/registerpage.py:25
+#, fuzzy
+msgid "Your password:"
+msgstr "Am facal-faire jabber agad:"
 
 #: menu/loginpage.py:38
 msgid "Log-in"
@@ -325,13 +212,126 @@ msgstr ""
 msgid "If you don't have an account, then you can register:"
 msgstr ""
 
+#: menu/loginpage.py:56 menu/registerpage.py:45
+msgid "Register"
+msgstr ""
+
 #: menu/loginpage.py:59
 msgid "If you want to reset your password:"
 msgstr ""
 
-#: menu/carpage.py:27
-msgid "Select the car"
-msgstr "Tagh an càr"
+#: menu/thankspage.py:15
+msgid "Thanks to: "
+msgstr "Taing do: "
+
+#: menu/trackpage.py:18
+msgid "Select the track"
+msgstr "Tagh an t-slighe"
+
+#: menu/driverpage.py:46
+msgid "Select the driver"
+msgstr "Tagh an draibhear"
+
+#: menu/driverpage.py:50
+msgid "Write your name:"
+msgstr "Sgrìobh d’ ainm:"
+
+#: menu/driverpage.py:167 menu/driverpage.py:174 menu/driverpage.py:175
+#: menu/driverpage.py:176 menu/driverpage.py:178 menu/driverpage.py:181
+msgid "your name"
+msgstr "d’ ainm"
+
+#: menu/mainpage.py:119
+msgid "Server problem"
+msgstr ""
+
+#: menu/mainpage.py:121
+msgid "Not up-to-date"
+msgstr "Chan eil seo cho ùr ’sa ghabhas"
+
+#: menu/mainpage.py:123
+msgid "Log out"
+msgstr "Clàraich a-mach"
+
+#: menu/mainpage.py:126
+msgid "Log in"
+msgstr "Clàraich a-steach"
+
+#: menu/mainpage.py:126
+msgid "multiplayer"
+msgstr "ioma-chluicheadair"
+
+#. i18n: This is a caption of a button.
+#: menu/mainpage.py:128
+msgid "Connecting"
+msgstr "’Ga cheangail"
+
+#: menu/mainpage.py:136
+msgid "Single Player"
+msgstr "Aon chluicheadair"
+
+#: menu/mainpage.py:137
+msgid "Options"
+msgstr "Roghainnean"
+
+#: menu/mainpage.py:138
+msgid "Support us"
+msgstr "Thoir taic dhuinn"
+
+#: menu/mainpage.py:139
+msgid "Credits"
+msgstr "Urram"
+
+#: menu/mainpage.py:141 yyagl/engine/gui/page.py:179
+msgid "Quit"
+msgstr "Fàg an-seo"
+
+#: menu/mainpage.py:158
+msgid "Note: the game is work-in-progress"
+msgstr "An aire: tha sinn ag obair air a’ gheama seo fhathast"
+
+#: menu/mainpage.py:195 menu/mainpage.py:198
+msgid "Last news:"
+msgstr "Na naidheachdan as ùire:"
+
+#: menu/mainpage.py:208 menu/mainpage.py:210
+msgid "show"
+msgstr "seall"
+
+#: menu/registerpage.py:67
+msgid ""
+"Your account has been registered. Now, in order to activate it, you should "
+"click the link that we've sent to your email (please check your spam folder "
+"if you can't find it). After that, you can log in."
+msgstr ""
+
+#: menu/registerpage.py:72
+msgid "Your nickname's format is invalid: please use only letters and numbers."
+msgstr ""
+
+#: menu/registerpage.py:74
+msgid "Your email's format is invalid."
+msgstr ""
+
+#: menu/registerpage.py:75
+msgid "Your nickname already exists."
+msgstr ""
+
+#: menu/registerpage.py:76
+msgid "Your email has already been used."
+msgstr ""
+
+#: menu/singleplayerpage.py:15
+msgid "Single race"
+msgstr "Rèis a-mhàin"
+
+#: menu/singleplayerpage.py:16
+msgid "New season"
+msgstr "Seusan ùr"
+
+#: menu/singleplayerpage.py:17
+msgid "Continue season"
+msgstr "Lean air adhart air an t-seusan"
 
 #: menu/exitmenu/exitpage.py:14
 msgid ""
@@ -370,65 +370,6 @@ msgstr "till dhan gheama"
 msgid "back to the main menu"
 msgstr "till dhan phrìomh chlàr-taice"
 
-#: menu/multiplayer/messagefrm.py:62 menu/multiplayer/messagefrm.py:205
-#: menu/multiplayer/messagefrm.py:253 menu/multiplayer/messagefrm.py:505
-msgid "write here your message"
-msgstr "sgrìobh do theachdaireachd an-seo"
-
-#: menu/multiplayer/messagefrm.py:379 menu/multiplayer/messagefrm.py:400
-msgid "you"
-msgstr "thusa"
-
-#: menu/multiplayer/invite_dlg.py:16
-#, python-format
-msgid "%s has invited you to a match, do you agree?"
-msgstr "Thug %s cuireadh dhut airson geama, a bheil thu a’ gabhail ris?"
-
-#: menu/multiplayer/friend_dlg.py:15
-#, python-format
-msgid "%s wants to be a (XMPP) friend of you, do you agree?"
-msgstr "Bu toigh le %s a bhith ’nad charaid (XMPP), a bheil thu ag aontachadh?"
-
-#: menu/multiplayer/remove_dlg.py:13
-msgid "you have been removed from the match"
-msgstr "chaidh do thoirt air falbh on gheama"
-
-#: menu/multiplayer/multiplayerfrm.py:115
-msgid ""
-"We've detected connection problems during server's creation. Please check "
-"your connection."
-msgstr ""
-"Mhothaich sinn do dhuilgheadasan ceangail nuair a chruthaich sinn am "
-"frithealaiche. Thoir sùil air a’ cheangal agad."
-
-#: menu/multiplayer/multiplayerfrm.py:118
-msgid "We can't connect to httpbin. Please retry later."
-msgstr ""
-"Chan urrainn dhuinn ceangal a dhèanamh gu httpbin. Feuch ris a-rithist an "
-"ceann greis."
-
-#: menu/multiplayer/exit_dlg.py:14
-#, fuzzy, python-format
-msgid "the server user %s has quit"
-msgstr "dh’fhàg cleachdaiche %s an fhrithealaiche"
-
-#: menu/multiplayer/forms.py:34
-msgid "Supporter!"
-msgstr "Neach-taic!"
-
-#: menu/multiplayer/forms.py:87
-msgid "send a message to the user"
-msgstr "cuir teachdaireachd ris a’ chleachdaiche"
-
-#: menu/multiplayer/forms.py:123
-#, fuzzy, python-format
-msgid "%s isn't playing yorg"
-msgstr "chan eil an cleachdaiche a’ cluich yorg"
-
-#: menu/multiplayer/forms.py:180
-msgid "remove from the match"
-msgstr "thoir air falbh on gheama"
-
 #: menu/multiplayer/matchfrm.py:160
 msgid "Start"
 msgstr "Tòisich"
@@ -436,6 +377,16 @@ msgstr "Tòisich"
 #: menu/multiplayer/matchfrm.py:171
 msgid "please wait for the server"
 msgstr "a’ feitheamh ris an fhrithealaiche"
+
+#: menu/multiplayer/exit_dlg.py:14
+#, fuzzy, python-format
+msgid "the server user %s has quit"
+msgstr "dh’fhàg cleachdaiche %s an fhrithealaiche"
+
+#: menu/multiplayer/friend_dlg.py:15
+#, python-format
+msgid "%s wants to be a (XMPP) friend of you, do you agree?"
+msgstr "Bu toigh le %s a bhith ’nad charaid (XMPP), a bheil thu ag aontachadh?"
 
 #: menu/multiplayer/usersfrm.py:32
 msgid "Current online users"
@@ -473,6 +424,36 @@ msgstr "thug thu cuireadh dhan chleachdaiche seo mu thràth"
 msgid "the user is already playing a match"
 msgstr "tha an cleachdaiche seo a’ cluich mar-thà"
 
+#: menu/multiplayer/messagefrm.py:62 menu/multiplayer/messagefrm.py:205
+#: menu/multiplayer/messagefrm.py:253 menu/multiplayer/messagefrm.py:509
+msgid "write here your message"
+msgstr "sgrìobh do theachdaireachd an-seo"
+
+#: menu/multiplayer/messagefrm.py:379 menu/multiplayer/messagefrm.py:404
+msgid "you"
+msgstr "thusa"
+
+#: menu/multiplayer/remove_dlg.py:13
+msgid "you have been removed from the match"
+msgstr "chaidh do thoirt air falbh on gheama"
+
+#: menu/multiplayer/forms.py:34
+msgid "Supporter!"
+msgstr "Neach-taic!"
+
+#: menu/multiplayer/forms.py:85
+msgid "send a message to the user"
+msgstr "cuir teachdaireachd ris a’ chleachdaiche"
+
+#: menu/multiplayer/forms.py:121
+#, fuzzy, python-format
+msgid "%s isn't playing yorg"
+msgstr "chan eil an cleachdaiche a’ cluich yorg"
+
+#: menu/multiplayer/forms.py:178
+msgid "remove from the match"
+msgstr "thoir air falbh on gheama"
+
 #: menu/multiplayer/network_dlg.py:13
 msgid ""
 "Connection error. Please check that (i) your firewall allows traffic for "
@@ -484,33 +465,60 @@ msgstr ""
 "cleachdaiche an fhrithealaiche port port 9099 (seo treòir air mar a "
 "dhearbhaicheas tu seo: http://www.ya2.it/pages/check-your-ports.html)."
 
-#: yorg/fsm.py:167 yorg/yorg.py:174
+#: menu/multiplayer/multiplayerfrm.py:115
+msgid ""
+"We've detected connection problems during server's creation. Please check "
+"your connection."
+msgstr ""
+"Mhothaich sinn do dhuilgheadasan ceangail nuair a chruthaich sinn am "
+"frithealaiche. Thoir sùil air a’ cheangal agad."
+
+#: menu/multiplayer/multiplayerfrm.py:118
+msgid "We can't connect to httpbin. Please retry later."
+msgstr ""
+"Chan urrainn dhuinn ceangal a dhèanamh gu httpbin. Feuch ris a-rithist an "
+"ceann greis."
+
+#: menu/multiplayer/invite_dlg.py:16
+#, python-format
+msgid "%s has invited you to a match, do you agree?"
+msgstr "Thug %s cuireadh dhut airson geama, a bheil thu a’ gabhail ris?"
+
+#: yorg/yorg.py:179 yorg/fsm.py:170
+msgid "Sinus Aestuum"
+msgstr ""
+
+#: yorg/yorg.py:179 yorg/fsm.py:167
 msgid "Toronto"
 msgstr "Toronto"
 
-#: yorg/fsm.py:167 yorg/yorg.py:174
+#: yorg/yorg.py:179 yorg/fsm.py:167
 msgid "Rome"
 msgstr "An Ròimh"
 
-#: yorg/fsm.py:168 yorg/yorg.py:174
+#: yorg/yorg.py:179 yorg/fsm.py:168
 msgid "Sheffield"
 msgstr "Sheffield"
 
-#: yorg/fsm.py:168 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:168
 msgid "Orlando"
 msgstr "Orlando"
 
-#: yorg/fsm.py:169 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:169
 msgid "Nagano"
 msgstr "Nagano"
 
-#: yorg/fsm.py:169 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:169
 msgid "Dubai"
 msgstr "Dubai"
 
-#: yorg/yorg.py:174
-msgid "Moon"
-msgstr ""
+#: yyagl/engine/gui/page.py:179
+msgid "Back"
+msgstr "Air ais"
+
+#: yyagl/engine/gui/mainpage.py:33
+msgid "version: "
+msgstr "tionndadh: "
 
 #: yyagl/racing/tuning/gui.py:24
 msgid "What do you want to upgrade?"
@@ -566,6 +574,19 @@ msgstr "dochann:"
 msgid "weapon"
 msgstr "arm:"
 
+#: yyagl/racing/ranking/gui.py:27
+#: yyagl/racing/race/gui/loading/loadingpage.py:63
+msgid "Ranking"
+msgstr "Rangachadh"
+
+#: yyagl/racing/ranking/gui.py:44
+msgid "Congratulations!"
+msgstr "Meal do naidheachd!"
+
+#: yyagl/racing/ranking/gui.py:53 yyagl/racing/race/gui/results.py:81
+msgid "Continue"
+msgstr "Air adhart"
+
 #: yyagl/racing/race/event.py:110
 #, python-format
 msgid "press %s to respawn"
@@ -591,10 +612,6 @@ msgstr "RANGACHADH"
 msgid "share:"
 msgstr "co-roinn:"
 
-#: yyagl/racing/race/gui/results.py:81 yyagl/racing/ranking/gui.py:53
-msgid "Continue"
-msgstr "Air adhart"
-
 #: yyagl/racing/race/gui/loading/loadingpage.py:25
 msgid "LOADING..."
 msgstr "’GA LUCHDADH…"
@@ -606,11 +623,6 @@ msgstr "slighe: "
 #: yyagl/racing/race/gui/loading/loadingpage.py:52
 msgid "Starting grid"
 msgstr "Griod tòiseachaidh"
-
-#: yyagl/racing/race/gui/loading/loadingpage.py:63
-#: yyagl/racing/ranking/gui.py:27
-msgid "Ranking"
-msgstr "Rangachadh"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:72
 msgid "Controls"
@@ -659,18 +671,6 @@ msgstr "taidhirean: +"
 #: yyagl/racing/race/gui/loading/loadingpage.py:104
 msgid "suspensions: +"
 msgstr "crochaidhean: +"
-
-#: yyagl/racing/ranking/gui.py:44
-msgid "Congratulations!"
-msgstr "Meal do naidheachd!"
-
-#: yyagl/engine/gui/mainpage.py:33
-msgid "version: "
-msgstr "tionndadh: "
-
-#: yyagl/engine/gui/page.py:179
-msgid "Back"
-msgstr "Air ais"
 
 #~ msgid "store the password"
 #~ msgstr "glèidh am facal-faire"
