--- a/assets/po/it_IT.po
+++ b/assets/po/it_IT.po
@@ -17,123 +17,76 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: menu/mainpage.py:119
-msgid "Server problem"
-msgstr "Problema server"
-
-#: menu/mainpage.py:121
-msgid "Not up-to-date"
-msgstr "Non aggiornato"
-
-#: menu/mainpage.py:123
-msgid "Log out"
-msgstr "Log out"
-
-#: menu/mainpage.py:126
-msgid "Log in"
-msgstr "Log in"
-
-#: menu/mainpage.py:126
-msgid "multiplayer"
-msgstr "multiplayer"
-
-#. i18n: This is a caption of a button.
-#: menu/mainpage.py:128
-msgid "Connecting"
-msgstr "Connessione"
-
-#: menu/mainpage.py:136
-msgid "Single Player"
-msgstr "Giocatore singolo"
-
-#: menu/mainpage.py:137
-msgid "Options"
-msgstr "Opzioni"
-
-#: menu/mainpage.py:138
-msgid "Support us"
-msgstr "Supportaci"
-
-#: menu/mainpage.py:139
-msgid "Credits"
-msgstr "Riconoscimenti"
-
-#: menu/mainpage.py:141 yyagl/engine/gui/page.py:179
-msgid "Quit"
-msgstr "Esci"
-
-#: menu/mainpage.py:158
-msgid "Note: the game is work-in-progress"
-msgstr "NB il gioco è in sviluppo"
-
-#: menu/mainpage.py:195 menu/mainpage.py:198
-msgid "Last news:"
-msgstr "Ultime notizie:"
-
-#: menu/mainpage.py:208 menu/mainpage.py:210
-msgid "show"
-msgstr "vedi"
-
-#: menu/registerpage.py:21 menu/resetpage.py:21
+#: menu/resetpage.py:21 menu/registerpage.py:21
 msgid "Your email:"
 msgstr "La tua mail:"
 
-#: menu/registerpage.py:23 menu/resetpage.py:23 menu/loginpage.py:21
+#: menu/resetpage.py:23 menu/loginpage.py:21 menu/registerpage.py:23
 msgid "Your user id:"
 msgstr "Il tuo user id:"
 
-#: menu/registerpage.py:25 menu/loginpage.py:23
-msgid "Your password:"
-msgstr "La tua password:"
-
-#: menu/registerpage.py:29 menu/registerpage.py:93 menu/registerpage.py:112
 #: menu/resetpage.py:27 menu/resetpage.py:74 menu/resetpage.py:93
 #: menu/loginpage.py:27 menu/loginpage.py:93 menu/loginpage.py:101
+#: menu/registerpage.py:29 menu/registerpage.py:93 menu/registerpage.py:112
 msgid "your user id"
 msgstr "il tuo user id"
 
-#: menu/registerpage.py:32 menu/registerpage.py:99 menu/registerpage.py:107
 #: menu/resetpage.py:30 menu/resetpage.py:80 menu/resetpage.py:88
+#: menu/registerpage.py:32 menu/registerpage.py:99 menu/registerpage.py:107
 msgid "your email"
 msgstr "la tua email"
 
-#: menu/registerpage.py:45 menu/loginpage.py:56
-msgid "Register"
-msgstr "Registra"
+#: menu/resetpage.py:39 menu/loginpage.py:65
+msgid "Reset"
+msgstr "Reset"
 
-#: menu/registerpage.py:67
+#: menu/resetpage.py:54
 msgid ""
-"Your account has been registered. Now, in order to activate it, you should "
-"click the link that we've sent to your email (please check your spam folder "
-"if you can't find it). After that, you can log in."
-msgstr "Il tuo account è stato registrato. Ora, per attivarlo, devi cliccare "
-"il link che ti abbiamo inviato alla tua email (controlla la cartella spam se "
-"non riesci a trovarla). Dopo ciò, puoi loggarti."
+"We've sent an email to you (please check your spam folder if you can't find "
+"it) with the instructions for completing the reset."
+msgstr ""
+"Ti abbiamo inviato una email (per piacere controlla la cartella spam se non "
+"riesci a trovarla) con le istruzioni per completare il reset."
 
-#: menu/registerpage.py:72
-msgid "Your nickname's format is invalid: please use only letters and numbers."
-msgstr "Il formato del tuo nickname non è valido: per piacere usa solo lettere "
-"e numeri."
+#: menu/resetpage.py:56
+msgid "This email isn't in our archive."
+msgstr "La email non è nel nostro archivio."
 
-#: menu/registerpage.py:74
-msgid "Your email's format is invalid."
-msgstr "Il formato della tua email non è valido."
+#: menu/resetpage.py:57
+msgid "This nickname isn't in our archive."
+msgstr "Questo nickname non è nel nostro archivio."
 
-#: menu/registerpage.py:75
-msgid "Your nickname already exists."
-msgstr "Il tuo nickname già esiste."
+#: menu/resetpage.py:58
+msgid "This nickname-email pair isn't in our archive."
+msgstr "Questa coppia nickname-email non è nel nostro archivio."
 
-#: menu/registerpage.py:76
-msgid "Your email has already been used."
-msgstr "La tua email è stata già usata."
-
-#: menu/registerpage.py:77 menu/resetpage.py:59
+#: menu/resetpage.py:59 menu/registerpage.py:77
 msgid "Connection error."
 msgstr "Errore di connessione."
 
-#: menu/registerpage.py:135 menu/resetpage.py:114 menu/loginpage.py:118
+#: menu/resetpage.py:114 menu/loginpage.py:119 menu/registerpage.py:135
 msgid "Error"
 msgstr "Errore"
+
+#: menu/creditpage.py:10
+msgid "Code"
+msgstr "Codice"
+
+#: menu/creditpage.py:11
+msgid "Art"
+msgstr "Grafica"
+
+#: menu/creditpage.py:12
+msgid "Audio"
+msgstr "Audio"
+
+#: menu/creditpage.py:13
+msgid "Translations"
+msgstr "Traduzioni"
+
+#: menu/creditpage.py:18
+msgid "Supporters"
+msgstr "Supporters"
 
 #: menu/inputpage.py:26 menu/inputpage.py:29
 msgid "Use the joypad when present"
@@ -219,6 +172,157 @@ msgstr "Dietro"
 msgid "Configure input"
 msgstr "Configura input"
 
+#: menu/carpage.py:27
+msgid "Select the car"
+msgstr "Seleziona la macchina"
+
+#: menu/carpage.py:78 menu/driverpage.py:74
+msgid "adherence"
+msgstr "aderenza"
+
+#: menu/carpage.py:78 menu/driverpage.py:74
+msgid "speed"
+msgstr "velocità:"
+
+#: menu/carpage.py:79 menu/driverpage.py:75
+msgid "stability"
+msgstr "stabilità"
+
+#: menu/loginpage.py:23 menu/registerpage.py:25
+msgid "Your password:"
+msgstr "La tua password:"
+
+#: menu/loginpage.py:38
+msgid "Log-in"
+msgstr "Log-in"
+
+#: menu/loginpage.py:42
+#, python-format
+msgid ""
+"If you are a supporter, please write us (%s) your user id so we can "
+"highlight your account as a supporter one."
+msgstr ""
+"Se sei un supporter, per piacere scrivici (%s) il tuo user id così possiamo "
+"evidenziare il tuo account come quello di un supporter."
+
+#: menu/loginpage.py:50
+msgid "If you don't have an account, then you can register:"
+msgstr "Se non hai un account puoi registrarti:"
+
+#: menu/loginpage.py:56 menu/registerpage.py:45
+msgid "Register"
+msgstr "Registra"
+
+#: menu/loginpage.py:59
+msgid "If you want to reset your password:"
+msgstr "Se vuoi resettare la tua password:"
+
+#: menu/thankspage.py:15
+msgid "Thanks to: "
+msgstr "Grazie a: "
+
+#: menu/trackpage.py:18
+msgid "Select the track"
+msgstr "Seleziona la pista"
+
+#: menu/driverpage.py:46
+msgid "Select the driver"
+msgstr "Seleziona il pilota"
+
+#: menu/driverpage.py:50
+msgid "Write your name:"
+msgstr "Scrivi il tuo nome:"
+
+#: menu/driverpage.py:167 menu/driverpage.py:174 menu/driverpage.py:175
+#: menu/driverpage.py:176 menu/driverpage.py:178 menu/driverpage.py:181
+msgid "your name"
+msgstr "tuo nome"
+
+#: menu/mainpage.py:119
+msgid "Server problem"
+msgstr "Problema server"
+
+#: menu/mainpage.py:121
+msgid "Not up-to-date"
+msgstr "Non aggiornato"
+
+#: menu/mainpage.py:123
+msgid "Log out"
+msgstr "Log out"
+
+#: menu/mainpage.py:126
+msgid "Log in"
+msgstr "Log in"
+
+#: menu/mainpage.py:126
+msgid "multiplayer"
+msgstr "multiplayer"
+
+#. i18n: This is a caption of a button.
+#: menu/mainpage.py:128
+msgid "Connecting"
+msgstr "Connessione"
+
+#: menu/mainpage.py:136
+msgid "Single Player"
+msgstr "Giocatore singolo"
+
+#: menu/mainpage.py:137
+msgid "Options"
+msgstr "Opzioni"
+
+#: menu/mainpage.py:138
+msgid "Support us"
+msgstr "Supportaci"
+
+#: menu/mainpage.py:139
+msgid "Credits"
+msgstr "Riconoscimenti"
+
+#: menu/mainpage.py:141 yyagl/engine/gui/page.py:179
+msgid "Quit"
+msgstr "Esci"
+
+#: menu/mainpage.py:158
+msgid "Note: the game is work-in-progress"
+msgstr "NB il gioco è in sviluppo"
+
+#: menu/mainpage.py:195 menu/mainpage.py:198
+msgid "Last news:"
+msgstr "Ultime notizie:"
+
+#: menu/mainpage.py:208 menu/mainpage.py:210
+msgid "show"
+msgstr "vedi"
+
+#: menu/registerpage.py:67
+msgid ""
+"Your account has been registered. Now, in order to activate it, you should "
+"click the link that we've sent to your email (please check your spam folder "
+"if you can't find it). After that, you can log in."
+msgstr ""
+"Il tuo account è stato registrato. Ora, per attivarlo, devi cliccare il link "
+"che ti abbiamo inviato alla tua email (controlla la cartella spam se non "
+"riesci a trovarla). Dopo ciò, puoi loggarti."
+
+#: menu/registerpage.py:72
+msgid "Your nickname's format is invalid: please use only letters and numbers."
+msgstr ""
+"Il formato del tuo nickname non è valido: per piacere usa solo lettere e "
+"numeri."
+
+#: menu/registerpage.py:74
+msgid "Your email's format is invalid."
+msgstr "Il formato della tua email non è valido."
+
+#: menu/registerpage.py:75
+msgid "Your nickname already exists."
+msgstr "Il tuo nickname già esiste."
+
+#: menu/registerpage.py:76
+msgid "Your email has already been used."
+msgstr "La tua email è stata già usata."
+
 #: menu/singleplayerpage.py:15
 msgid "Single race"
 msgstr "Gara singola"
@@ -230,106 +334,6 @@ msgstr "Nuova stagione"
 #: menu/singleplayerpage.py:17
 msgid "Continue season"
 msgstr "Continua stagione"
-
-#: menu/creditpage.py:10
-msgid "Code"
-msgstr "Codice"
-
-#: menu/creditpage.py:11
-msgid "Art"
-msgstr "Grafica"
-
-#: menu/creditpage.py:12
-msgid "Audio"
-msgstr "Audio"
-
-#: menu/creditpage.py:13
-msgid "Translations"
-msgstr "Traduzioni"
-
-#: menu/creditpage.py:18
-msgid "Supporters"
-msgstr "Supporters"
-
-#: menu/trackpage.py:18
-msgid "Select the track"
-msgstr "Seleziona la pista"
-
-#: menu/resetpage.py:39 menu/loginpage.py:65
-msgid "Reset"
-msgstr "Reset"
-
-#: menu/resetpage.py:54
-msgid ""
-"We've sent an email to you (please check your spam folder if you can't find "
-"it) with the instructions for completing the reset."
-msgstr "Ti abbiamo inviato una email (per piacere controlla la cartella spam "
-"se non riesci a trovarla) con le istruzioni per completare il reset."
-
-#: menu/resetpage.py:56
-msgid "This email isn't in our archive."
-msgstr "La email non è nel nostro archivio."
-
-#: menu/resetpage.py:57
-msgid "This nickname isn't in our archive."
-msgstr "Questo nickname non è nel nostro archivio."
-
-#: menu/resetpage.py:58
-msgid "This nickname-email pair isn't in our archive."
-msgstr "Questa coppia nickname-email non è nel nostro archivio."
-
-#: menu/thankspage.py:15
-msgid "Thanks to: "
-msgstr "Grazie a: "
-
-#: menu/driverpage.py:46
-msgid "Select the driver"
-msgstr "Seleziona il pilota"
-
-#: menu/driverpage.py:50
-msgid "Write your name:"
-msgstr "Scrivi il tuo nome:"
-
-#: menu/driverpage.py:74 menu/carpage.py:78
-msgid "adherence"
-msgstr "aderenza"
-
-#: menu/driverpage.py:74 menu/carpage.py:78
-msgid "speed"
-msgstr "velocità:"
-
-#: menu/driverpage.py:75 menu/carpage.py:79
-msgid "stability"
-msgstr "stabilità"
-
-#: menu/driverpage.py:167 menu/driverpage.py:174 menu/driverpage.py:175
-#: menu/driverpage.py:176 menu/driverpage.py:178 menu/driverpage.py:181
-msgid "your name"
-msgstr "tuo nome"
-
-#: menu/loginpage.py:38
-msgid "Log-in"
-msgstr "Log-in"
-
-#: menu/loginpage.py:42
-#, python-format
-msgid ""
-"If you are a supporter, please write us (%s) your user id so we can "
-"highlight your account as a supporter one."
-msgstr "Se sei un supporter, per piacere scrivici (%s) il tuo user id così "
-"possiamo evidenziare il tuo account come quello di un supporter."
-
-#: menu/loginpage.py:50
-msgid "If you don't have an account, then you can register:"
-msgstr "Se non hai un account puoi registrarti:"
-
-#: menu/loginpage.py:59
-msgid "If you want to reset your password:"
-msgstr "Se vuoi resettare la tua password:"
-
-#: menu/carpage.py:27
-msgid "Select the car"
-msgstr "Seleziona la macchina"
 
 #: menu/exitmenu/exitpage.py:14
 msgid ""
@@ -368,63 +372,6 @@ msgstr "torna al gioco"
 msgid "back to the main menu"
 msgstr "torna al menu principale"
 
-#: menu/multiplayer/messagefrm.py:62 menu/multiplayer/messagefrm.py:205
-#: menu/multiplayer/messagefrm.py:253 menu/multiplayer/messagefrm.py:505
-msgid "write here your message"
-msgstr "scrivi qui il tuo messaggio"
-
-#: menu/multiplayer/messagefrm.py:379 menu/multiplayer/messagefrm.py:400
-msgid "you"
-msgstr "tu"
-
-#: menu/multiplayer/invite_dlg.py:16
-#, python-format
-msgid "%s has invited you to a match, do you agree?"
-msgstr "%s ti ha invitato a una partita, accetti?"
-
-#: menu/multiplayer/friend_dlg.py:15
-#, python-format
-msgid "%s wants to be a (XMPP) friend of you, do you agree?"
-msgstr "%s vuole essere un tuo amico (XMPP), accetti?"
-
-#: menu/multiplayer/remove_dlg.py:13
-msgid "you have been removed from the match"
-msgstr "sei stato rimosso dalla partita"
-
-#: menu/multiplayer/multiplayerfrm.py:115
-msgid ""
-"We've detected connection problems during server's creation. Please check "
-"your connection."
-msgstr ""
-"Abbiamo individuato problemi durante la creazione del server. Per piacere, "
-"controlla la tua connessione."
-
-#: menu/multiplayer/multiplayerfrm.py:118
-msgid "We can't connect to httpbin. Please retry later."
-msgstr "Non riusciamo a connetterci a httpbin. Per piacere, ritenda dopo."
-
-#: menu/multiplayer/exit_dlg.py:14
-#, python-format
-msgid "the server user %s has quit"
-msgstr "l'utente server %s è uscito"
-
-#: menu/multiplayer/forms.py:34
-msgid "Supporter!"
-msgstr "Supporter!"
-
-#: menu/multiplayer/forms.py:87
-msgid "send a message to the user"
-msgstr "invia un messaggio all'utente"
-
-#: menu/multiplayer/forms.py:123
-#, python-format
-msgid "%s isn't playing yorg"
-msgstr "%s non sta giocando a yorg"
-
-#: menu/multiplayer/forms.py:180
-msgid "remove from the match"
-msgstr "rimuovi dalla partita"
-
 #: menu/multiplayer/matchfrm.py:160
 msgid "Start"
 msgstr "Avvia"
@@ -432,6 +379,16 @@ msgstr "Avvia"
 #: menu/multiplayer/matchfrm.py:171
 msgid "please wait for the server"
 msgstr "per favore aspetta il server"
+
+#: menu/multiplayer/exit_dlg.py:14
+#, python-format
+msgid "the server user %s has quit"
+msgstr "l'utente server %s è uscito"
+
+#: menu/multiplayer/friend_dlg.py:15
+#, python-format
+msgid "%s wants to be a (XMPP) friend of you, do you agree?"
+msgstr "%s vuole essere un tuo amico (XMPP), accetti?"
 
 #: menu/multiplayer/usersfrm.py:32
 msgid "Current online users"
@@ -469,6 +426,36 @@ msgstr "hai già invitato questo utente"
 msgid "the user is already playing a match"
 msgstr "l'utente sta già giocando"
 
+#: menu/multiplayer/messagefrm.py:62 menu/multiplayer/messagefrm.py:205
+#: menu/multiplayer/messagefrm.py:253 menu/multiplayer/messagefrm.py:509
+msgid "write here your message"
+msgstr "scrivi qui il tuo messaggio"
+
+#: menu/multiplayer/messagefrm.py:379 menu/multiplayer/messagefrm.py:404
+msgid "you"
+msgstr "tu"
+
+#: menu/multiplayer/remove_dlg.py:13
+msgid "you have been removed from the match"
+msgstr "sei stato rimosso dalla partita"
+
+#: menu/multiplayer/forms.py:34
+msgid "Supporter!"
+msgstr "Supporter!"
+
+#: menu/multiplayer/forms.py:85
+msgid "send a message to the user"
+msgstr "invia un messaggio all'utente"
+
+#: menu/multiplayer/forms.py:121
+#, python-format
+msgid "%s isn't playing yorg"
+msgstr "%s non sta giocando a yorg"
+
+#: menu/multiplayer/forms.py:178
+msgid "remove from the match"
+msgstr "rimuovi dalla partita"
+
 #: menu/multiplayer/network_dlg.py:13
 msgid ""
 "Connection error. Please check that (i) your firewall allows traffic for "
@@ -480,33 +467,58 @@ msgstr ""
 "sua porta 9099 (ecco una guida per verificarlo: http://www.ya2.it/pages/"
 "check-your-ports.html)."
 
-#: yorg/fsm.py:167 yorg/yorg.py:174
+#: menu/multiplayer/multiplayerfrm.py:115
+msgid ""
+"We've detected connection problems during server's creation. Please check "
+"your connection."
+msgstr ""
+"Abbiamo individuato problemi durante la creazione del server. Per piacere, "
+"controlla la tua connessione."
+
+#: menu/multiplayer/multiplayerfrm.py:118
+msgid "We can't connect to httpbin. Please retry later."
+msgstr "Non riusciamo a connetterci a httpbin. Per piacere, ritenda dopo."
+
+#: menu/multiplayer/invite_dlg.py:16
+#, python-format
+msgid "%s has invited you to a match, do you agree?"
+msgstr "%s ti ha invitato a una partita, accetti?"
+
+#: yorg/yorg.py:179 yorg/fsm.py:170
+msgid "Sinus Aestuum"
+msgstr "Sinus Aestuum"
+
+#: yorg/yorg.py:179 yorg/fsm.py:167
 msgid "Toronto"
 msgstr "Toronto"
 
-#: yorg/fsm.py:167 yorg/yorg.py:174
+#: yorg/yorg.py:179 yorg/fsm.py:167
 msgid "Rome"
 msgstr "Roma"
 
-#: yorg/fsm.py:168 yorg/yorg.py:174
+#: yorg/yorg.py:179 yorg/fsm.py:168
 msgid "Sheffield"
 msgstr "Sheffield"
 
-#: yorg/fsm.py:168 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:168
 msgid "Orlando"
 msgstr "Orlando"
 
-#: yorg/fsm.py:169 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:169
 msgid "Nagano"
 msgstr "Nagano"
 
-#: yorg/fsm.py:169 yorg/yorg.py:175
+#: yorg/yorg.py:180 yorg/fsm.py:169
 msgid "Dubai"
 msgstr "Dubai"
 
-#: yorg/yorg.py:174
-msgid "Moon"
-msgstr "Luna"
+#: yyagl/engine/gui/page.py:179
+msgid "Back"
+msgstr "Indietro"
+
+#: yyagl/engine/gui/mainpage.py:33
+msgid "version: "
+msgstr "versione: "
 
 #: yyagl/racing/tuning/gui.py:24
 msgid "What do you want to upgrade?"
@@ -561,6 +573,19 @@ msgstr "danni:"
 msgid "weapon"
 msgstr "arma"
 
+#: yyagl/racing/ranking/gui.py:27
+#: yyagl/racing/race/gui/loading/loadingpage.py:63
+msgid "Ranking"
+msgstr "Classifica"
+
+#: yyagl/racing/ranking/gui.py:44
+msgid "Congratulations!"
+msgstr "Congratulazioni!"
+
+#: yyagl/racing/ranking/gui.py:53 yyagl/racing/race/gui/results.py:81
+msgid "Continue"
+msgstr "Continua"
+
 #: yyagl/racing/race/event.py:110
 #, python-format
 msgid "press %s to respawn"
@@ -586,10 +611,6 @@ msgstr "CLASSIFICA"
 msgid "share:"
 msgstr "condividi:"
 
-#: yyagl/racing/race/gui/results.py:81 yyagl/racing/ranking/gui.py:53
-msgid "Continue"
-msgstr "Continua"
-
 #: yyagl/racing/race/gui/loading/loadingpage.py:25
 msgid "LOADING..."
 msgstr "CARICAMENTO..."
@@ -601,11 +622,6 @@ msgstr "pista: "
 #: yyagl/racing/race/gui/loading/loadingpage.py:52
 msgid "Starting grid"
 msgstr "Griglia di partenza"
-
-#: yyagl/racing/race/gui/loading/loadingpage.py:63
-#: yyagl/racing/ranking/gui.py:27
-msgid "Ranking"
-msgstr "Classifica"
 
 #: yyagl/racing/race/gui/loading/loadingpage.py:72
 msgid "Controls"
@@ -654,15 +670,3 @@ msgstr "gomme: +"
 #: yyagl/racing/race/gui/loading/loadingpage.py:104
 msgid "suspensions: +"
 msgstr "sospensioni: +"
-
-#: yyagl/racing/ranking/gui.py:44
-msgid "Congratulations!"
-msgstr "Congratulazioni!"
-
-#: yyagl/engine/gui/mainpage.py:33
-msgid "version: "
-msgstr "versione: "
-
-#: yyagl/engine/gui/page.py:179
-msgid "Back"
-msgstr "Indietro"
